--- a/04-sql-orm/monster_hero_api/package.json
+++ b/04-sql-orm/monster_hero_api/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate"
   },
   "keywords": [],
   "author": "",
@@ -15,13 +17,10 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "express": "^4.21.1",
-    "mysql2": "^3.11.4",
-    "pg": "^8.15.6",
-    "prisma": "^5.22.0"
+    "pg": "^8.15.6"
   }
 }
